--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,11 @@
 
 @font-face {
   font-family: 'Romate Hood';
-  src: url(/WEBSITE\ ONE\ -RESTURANT/font/RomateHood-p73Ed.otf);
+  src: url(font/RomateHood-p73Ed.otf);
 }
 @font-face {
   font-family: 'MomcakeBold';
-  src: url(/WEBSITE\ ONE\ -RESTURANT/font/MomcakeBold-WyonA.otf);
+  src: url(font/MomcakeBold-WyonA.otf);
 }
 
 /*CLEAR FIX HACK*/
