--- a/css/style.css
+++ b/css/style.css
@@ -196,7 +196,7 @@ header {
 .menulist {
   background-color: rgba(255, 255, 255, 0.404);
   padding: 30px 80px;
-  background-image: url(/WEBSITE\ ONE\ -RESTURANT/img/coffee.jpg);
+  background-image: url(img/coffee.jpg);
   background-size: cover;
   height: 270px;
 }
@@ -222,7 +222,7 @@ header {
       left: 57%;
       background-color: rgba(255, 255, 255, 0.404);
       padding: 30px 80px;
-      background-image: url(/WEBSITE\ ONE\ -RESTURANT/img/coffee.jpg);
+      background-image: url(img/coffee.jpg);
       background-size: cover;
       height: 270px;
       width: 300px;
